# sick

./: .gitignore  README.md  example_configuration.json  example_filters.json  sick.sln
common/: common.vcxitems
common/3P/json/: json.hpp
common/3P/sickapi/src/: CoLa2ProtocolHandler.cpp  CoLaBProtocolHandler.cpp  CoLaBProtocolHandler.h  CoLaCommand.h  CoLaParameterReader.h  ControlSession.cpp  FrameGrabberBase.cpp  FrameGrabberBase.h  Framegrabber.h  IProtocolHandler.h  MD5.cpp  PointCloudPlyWriter.h  UdpSocket.cpp  VisionaryAutoIPScan.cpp  VisionaryAutoIPScan.h  VisionaryData.h  VisionaryDataStream.cpp  VisionaryDataStream.h  VisionarySData.cpp  VisionaryTData.h  (+2 more)
common/3pp/snap7/: snap7.exp  snap7.h  snap7.lib
common/3pp/tinycolormap/: TinyColormap.hpp
common/include/filters/: bilateral_filter.h  blur_filter.h  crop_filter.h  filter_base.h  filter_factory.h  filter_pipeline.h  filter_worker.h  gaussian_blur_filter.h  median_filter.h  moving_average_filter.h  resize_filter.h  stack_blur_filter.h  threshold_filter.h
common/src/filters/: blur_filter.cpp  filter_graph.cpp  filter_pipeline.cpp  median_filter.cpp  moving_average_filter.cpp  resize_filter.cpp  threshold_filter.cpp
docs/: visual_studio_info
dummy_plc/: dummy_plc.vcxproj  dummy_plc.vcxproj.filters  main.cpp
dummy_plc/snap7/: snap7.cpp
gui/: gui.vcxproj  gui.vcxproj.filters  imgui.ini  main.cpp
gui/gui/src/: filter_editor.cpp  filter_graph.cpp  filter_pipeline.cpp  filter_worker.cpp  frame.cpp  frame_helper.cpp  frameset.cpp  main.cpp
gui/imgui/: imgui.h  imgui_widgets.cpp
gui/nodeeditor/: imnodes.cpp
gui/sickapi/src/: AuthenticationLegacy.h  CoLaParameterWriter.h  ITransport.h  PointCloudPlyWriter.cpp  TcpSocket.cpp  UdpSocket.cpp  VisionaryAutoIPScan.cpp  VisionaryData.cpp  VisionarySData.h  VisionaryTData.cpp
headless/: example_config.txt  headless.vcxproj  headless.vcxproj.filters  main.cpp  prop.ini  prop.json  prop.xml
headless/headless/src/: camera_handler.cpp  filter_pipeline.cpp  frame.cpp  main.cpp  plc_handler.cpp
headless/json_schema_validator/src/: json-patch.hpp
headless/sickapi/: CMakeLists.txt
headless/sickapi/src/: AuthenticationLegacy.cpp  AuthenticationSecure.h  CoLa2ProtocolHandler.h  CoLaParameterWriter.cpp  FrameGrabberBase.cpp  IAuthentication.cpp  IProtocolHandler.cpp  PointXYZ.h  TcpSocket.cpp  TcpSocket.h  VisionaryAutoIPScan.cpp  VisionaryData.cpp  VisionaryDataStream.cpp  VisionaryEndian.h  VisionarySData.cpp  VisionaryTData.cpp  VisionaryTMiniData.cpp
headless_test/: headless_test.vcxproj  test.cpp
headless_test/resources/: all_filters_valid.json
test/: test.vcxproj
tia_portal/: example_project_archive.zap17
tia_portal/example_project/: example_project.ap17
tia_portal/example_project/System/: PEData.idx  PEData.plf
tia_portal/example_project/XRef/: XRef.db
view_server/: main.cpp  view_server.vcxproj
(+124 files in other folders)
